welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:8: error: not found: value rendBiscuit
		rendBiscuit();
                ^