welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
for ( i<-1 to 11 )
	{
		while (!estSurBiscuit)
			{
				recule();
			}
		rendBiscuit();

		while (!estSurBiscuit)
			{
				avance();
			}
		recule();
		poseBiscuit();
	}	


